tests/expectations/parser-statement/statement/conditional_fail.out
Error [EPAR0370008]: unexpected statement: expected 'Block or Conditional', found 'let x = 2'
    --> test_0:1:17
     |
   1 | if true {} else let x = 2;
     |                 ^^^^^^^^^
